--- a/composeApp/src/androidMain/res/values-v31/themes.xml
+++ b/composeApp/src/androidMain/res/values-v31/themes.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.GhAlmacen" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:windowIsTranslucent">true</item>
+    <style name="Theme.GhAlmacen.Splash" parent="Theme.SplashScreen">
+        <item name="android:windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
+        <item name="postSplashScreenTheme">@style/Theme.GhAlmacen.App</item>
+        <!--        <item name="android:windowSplashScreenBackground">@color/white</item>-->
+        <!--        <item name="android:windowSplashScreenIconBackgroundColor">@color/white</item>-->
     </style>
 </resources>
